removing members works